--- a/source/index.html
+++ b/source/index.html
@@ -10,5 +10,6 @@
   <body class="page__body">
     <header class="header">Шапка</header>
     <p>Привет, мир!</p>
+    <p>Привет, страна</p>
   </body>
 </html>
