--- a/source/index.html
+++ b/source/index.html
@@ -11,5 +11,6 @@
     <header class="header">Шапка</header>
     <p>Привет, мир!</p>
     <p>Привет, страна</p>
+    <p>Привет</p>
   </body>
 </html>
